# speed_monitor

./: .gitignore  Makefile  README.md  calibration.md  config.example.json  pyproject.toml  requirements.txt  ssd.md
.github/: copilot-instructions.md
.github/workflows/: test.yml
helpers/: downsample.py  getframe.py
src/: main.py
src/speed_monitor/: __init__.py  config.py  detector.py  logger.py  monitor.py  speed.py  tracker.py  types.py
tests/: conftest.py  test_speed.py  test_tracker.py
