[tool.poetry]
name = "speed-monitor"
version = "0.1.0"
description = "Baseline computer-vision speed monitoring pipeline (see ssd.md)."
authors = ["Alex JCH <alexjch@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4"

numpy = "*"
opencv-python = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"